@@ -14,6 +14,9 @@ documents those changes that are of interest to users and administrators.
     terminating.
  -- Bitstring operations are now 64bit instead of 32bit.
  -- Replace hweight() function in bitstring with faster version.
+ -- scancel would treat a non-numeric argument as the name of jobs to be
+    cancelled (a non-documented feature). Cancelling jobs by name now require
+    the "--jobname=" command line argument.
 
 * Changes in Slurm 17.02.0pre4
 ==============================
